fix auto overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2630,7 +2630,7 @@ ul li section{
  padding: 0 20px 0 0px;
 }
 .detailsText{
- /* height:138px; */
+ height:190px;
  overflow: auto;
 }
 /*.detailsText:hover {*/
